kube/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-extract
  labels:
    name: data-extract
    environment: production
